' Generated by UML Generator
' Encoded: rLPHJy8m47xVh-ZZa41yNg91CL4Vr2WcFXWVIdT0fUj8ss4Yuc-tPMozrMaaCGPVW7rtt-MxxwuT0sseCaKc8ZtdSa4LpGWJLEiJOnGV5mOkMIv7_1N8OJJZAH365HCGHPiiSa7rRM4hW1ePQe2i8a9wYieqpnwubA0IShTvSlYqoCPKY2lAPbn2GiuRpowZPp-wGStuUrh7KRZKeCoM5NSIiinvwWBm3AmDDuMIGwjpZi6KwmNOIXXJCE52rCYwQhmfuXwqELDyMHhGNLbN3MThab4kOwgcEY4ZwwUSFZvzgZJAHOhC-w59DMi_xIc7ltjRYFSVvbxsfkqiRWgpKUq6RRySB7EynYWmQouuYkXggWXxyPRWpERpEyiBQHB2fI57zgXMVZRbnZxh5-tJKBOUOqqDAmLG3QSK-UaTHf9yR6fB8bCThUhKnQuRpeRHyFu8mlxa106yUo6d3HmwvGwqsZVcvEKPB_FSBxysJSKx7OcWsRqy5NXOErzZzPJth3KxLb0Joe3ullvKGFXoxVVVZhSR68OEUhtGOlzUGJmFjZ3mfOqu66vX1JUYooXvmSwZYa7a2_7rGWNwQxo5Dm2Psdyp7m
' URL: http://www.plantuml.com/plantuml/uml/rLPHJy8m47xVh-ZZa41yNg91CL4Vr2WcFXWVIdT0fUj8ss4Yuc-tPMozrMaaCGPVW7rtt-MxxwuT0sseCaKc8ZtdSa4LpGWJLEiJOnGV5mOkMIv7_1N8OJJZAH365HCGHPiiSa7rRM4hW1ePQe2i8a9wYieqpnwubA0IShTvSlYqoCPKY2lAPbn2GiuRpowZPp-wGStuUrh7KRZKeCoM5NSIiinvwWBm3AmDDuMIGwjpZi6KwmNOIXXJCE52rCYwQhmfuXwqELDyMHhGNLbN3MThab4kOwgcEY4ZwwUSFZvzgZJAHOhC-w59DMi_xIc7ltjRYFSVvbxsfkqiRWgpKUq6RRySB7EynYWmQouuYkXggWXxyPRWpERpEyiBQHB2fI57zgXMVZRbnZxh5-tJKBOUOqqDAmLG3QSK-UaTHf9yR6fB8bCThUhKnQuRpeRHyFu8mlxa106yUo6d3HmwvGwqsZVcvEKPB_FSBxysJSKx7OcWsRqy5NXOErzZzPJth3KxLb0Joe3ullvKGFXoxVVVZhSR68OEUhtGOlzUGJmFjZ3mfOqu66vX1JUYooXvmSwZYa7a2_7rGWNwQxo5Dm2Psdyp7m
' Generated on: 2025-12-17T17:59:12.504964

@startuml
skinparam classAttributeIconSize 0
hide circle

class HasQuarterState {
  -randomWinner: Random
  -gumballMachine: GumballMachine
  --
  +HasQuarterState(gumballMachine: GumballMachine)
  +insertQuarter(): void
  +ejectQuarter(): void
  +turnCrank(): void
  +dispense(): void
  +refill(): void
}

class GumballMachineTestDrive {
  +{static} main(args: String[]): void
}

class SoldState {
  -gumballMachine: GumballMachine
  --
  +SoldState(gumballMachine: GumballMachine)
  +insertQuarter(): void
  +ejectQuarter(): void
  +turnCrank(): void
  +dispense(): void
  +refill(): void
}

class WinnerState {
  -gumballMachine: GumballMachine
  --
  +WinnerState(gumballMachine: GumballMachine)
  +insertQuarter(): void
  +ejectQuarter(): void
  +turnCrank(): void
  +dispense(): void
  +refill(): void
}

class GumballMachine {
  -soldOutState: State
  -noQuarterState: State
  -hasQuarterState: State
  -soldState: State
  -winnerState: State
  -state: State
  ~count: int = 0
  --
  +GumballMachine(count: int)
  +insertQuarter(): void
  +ejectQuarter(): void
  +turnCrank(): void
  +setState(state: State): void
  +releaseBall(): void
  +refill(count: int): void
  +getSoldOutState(): State
  +getNoQuarterState(): State
  +getHasQuarterState(): State
  +getSoldState(): State
  +getWinnerState(): State
  +getState(): State
  +getCount(): int
  +toString(): String
}

class NoQuarterState {
  -gumballMachine: GumballMachine
  --
  +NoQuarterState(gumballMachine: GumballMachine)
  +insertQuarter(): void
  +ejectQuarter(): void
  +turnCrank(): void
  +dispense(): void
  +refill(): void
}

class SoldOutState {
  -gumballMachine: GumballMachine
  --
  +SoldOutState(gumballMachine: GumballMachine)
  +insertQuarter(): void
  +ejectQuarter(): void
  +turnCrank(): void
  +dispense(): void
  +refill(): void
}

interface State {
  +insertQuarter(): void
  +ejectQuarter(): void
  +turnCrank(): void
  +dispense(): void
  +refill(): void
}

HasQuarterState ..|> State
HasQuarterState *-- GumballMachine
SoldState ..|> State
SoldState *-- GumballMachine
WinnerState ..|> State
WinnerState *-- GumballMachine
GumballMachine *-- State
NoQuarterState ..|> State
NoQuarterState *-- GumballMachine
SoldOutState ..|> State
SoldOutState *-- GumballMachine
@enduml